whitespace addition & color fix

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,6 +7,10 @@
   padding: 1rem;
 }
 
+.xs-space{
+    padding: 0.2rem;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 5px;
@@ -105,4 +109,8 @@ ul.statistics li .stat-app {
 
 .ui.fluid.category.search {
     visibility: hidden;
+}
+
+.profile-avatar-tile{
+    min-width: 180px;
 }
